# barflyextract

./: .coveragerc  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.rst  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
src/barflyextract/: __init__.py  api.py  cli.py  datasource.py  db.py  extract.py  search.py  skeleton.py  util.py
tests/: conftest.py  test_api.py  test_barflyextract.py  test_datasource.py  test_extract.py  test_integration.py  test_search.py  test_skeleton.py
tests/__snapshots__/: test_extract.ambr  test_integration.ambr  test_search.ambr
