[project]
name = "barflyextract"
description = "Scrape The Educated Barfly's cocktail recipes from its YouTube channel."
authors = [{name = "John Kurkowski", email = "john.kurkowski@gmail.com"}]
license = { file = "LICENSE.txt" }
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Private :: Do Not Upload",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = [
    "google-api-python-client>=1.7.11",
    "google-auth-oauthlib>=0.5.1",
    "unidecode>=1.1.1",
]

[project.optional-dependencies]
testing = [
    "black",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "syrupy",
    "tox",
    "tox-uv",
    "types-setuptools",
]

[build-system]
requires = ["setuptools-scm", "setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "barflyextract",
    "--cov-report",
    "html",
]

[tool.ruff]
select = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]
ignore = [
  "E501", # line too long; if Black does its job, not worried about the rare long line
]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
