[project]
name = "barflyextract"
description = "Scrape The Educated Barfly's cocktail recipes from its YouTube channel."
authors = [{name = "John Kurkowski", email = "john.kurkowski@gmail.com"}]
license = { file = "LICENSE.txt" }
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Private :: Do Not Upload",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-api-python-client>=1.7.11",
    "google-auth-oauthlib>=0.5.1",
    "rich>=13.9.4",
    "unidecode>=1.1.1",
]

[project.optional-dependencies]
testing = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "python-lsp-server",
    "ruff",
    "syrupy",
    "tox",
    "tox-uv",
    "types-setuptools",
]

[build-system]
requires = ["setuptools-scm", "setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "barflyextract",
    "--cov-report",
    "html",
]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]
ignore = [
  "E501", # line too long; if formatter does its job, not worried about the rare long line
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
